--- a/colibre/auto_plotter/metallicity.yml
+++ b/colibre/auto_plotter/metallicity.yml
@@ -498,6 +498,333 @@ stellar_mass_gas_sf_metallicity_lom_allgals_50:
     - filename: GalaxyStellarMassGasMetallicity/FIREbox.hdf5
     - filename: GalaxyStellarMassGasMetallicity/Strom2022_OH.hdf5
 
+stellar_mass_gas_nitrogen_over_oxygen_lom_50_kpc:
+  type: "scatter"
+  legend_loc: "upper left"
+  selection_mask: "derived_quantities.has_cold_dense_gas_50_kpc"
+  comment: "All galaxies, LoM, Diffuse"
+  y:
+    quantity: "derived_quantities.gas_n_over_o_abundance_avglin_50_kpc"
+    log: false
+    units: "dimensionless"
+    start: -3
+    end: 0.5
+  x:
+    quantity: "apertures.mass_star_50_kpc"
+    units: solar_mass
+    start: 1e6
+    end: 1e12
+  median:
+    plot: true
+    log: true
+    adaptive: true
+    number_of_bins: 30
+    start:
+      value: 1e6
+      units: solar_mass
+    end:
+      value: 1e12
+      units: solar_mass
+  metadata:
+    title: "Stellar mass - Gas Diffuse Nitrogen over Oxygen relation (log-of-mean, 50 kpc aperture)"
+    caption: Shown for galaxies with cold, dense gas. No minimum metallicity is imposed. All haloes are plotted, including subhaloes. This uses depleted gas metallicity, i.e. it does not include metals that are present in dust.
+    section: Gas Metallicity
+    show_on_webpage: true
+  observational_data:
+    - filename: GalaxyStellarMassGasMetallicity/HaydenPawson_2022a.hdf5
+
+stellar_mass_gas_nitrogen_over_oxygen_hifloor_50_kpc:
+  type: "scatter"
+  legend_loc: "upper left"
+  selection_mask: "derived_quantities.has_cold_dense_gas_50_kpc"
+  comment: "All galaxies, High floor, Diffuse"
+  y:
+    quantity: "derived_quantities.gas_n_over_o_abundance_avglog_high_50_kpc"
+    log: false
+    units: "dimensionless"
+    start: -3
+    end: 0.5
+  x:
+    quantity: "apertures.mass_star_50_kpc"
+    units: solar_mass
+    start: 1e6
+    end: 1e12
+  median:
+    plot: true
+    log: true
+    adaptive: true
+    number_of_bins: 30
+    start:
+      value: 1e6
+      units: solar_mass
+    end:
+      value: 1e12
+      units: solar_mass
+  metadata:
+    title: "Stellar mass - Gas Diffuse Nitrogen over Oxygen relation (mean-of-log, 50 kpc aperture)"
+    caption: Shown for galaxies with cold, dense gas. The floor value is set to 1e-3 x (N/O)sun. All haloes are plotted, including subhaloes. This uses depleted gas metallicity, i.e. it does not include metals that are present in dust.
+    section: Gas Metallicity
+    show_on_webpage: true
+  observational_data:
+    - filename: GalaxyStellarMassGasMetallicity/HaydenPawson_2022a.hdf5
+
+stellar_mass_gas_nitrogen_over_oxygen_lofloor_50_kpc:
+  type: "scatter"
+  legend_loc: "upper left"
+  selection_mask: "derived_quantities.has_cold_dense_gas_50_kpc"
+  comment: "All galaxies, Low floor, Diffuse"
+  y:
+    quantity: "derived_quantities.gas_n_over_o_abundance_avglog_low_50_kpc"
+    log: false
+    units: "dimensionless"
+    start: -3
+    end: 0.5
+  x:
+    quantity: "apertures.mass_star_50_kpc"
+    units: solar_mass
+    start: 1e6
+    end: 1e12
+  median:
+    plot: true
+    log: true
+    adaptive: true
+    number_of_bins: 30
+    start:
+      value: 1e6
+      units: solar_mass
+    end:
+      value: 1e12
+      units: solar_mass
+  metadata:
+    title: "Stellar mass - Gas Diffuse Nitrogen over Oxygen relation (mean-of-log, 50 kpc aperture)"
+    caption: Shown for galaxies with cold, dense gas. The floor value is set to 1e-4 x (N/O)sun. All haloes are plotted, including subhaloes. This uses depleted gas metallicity, i.e. it does not include metals that are present in dust.
+    section: Gas Metallicity
+    show_on_webpage: true
+  observational_data:
+    - filename: GalaxyStellarMassGasMetallicity/HaydenPawson_2022a.hdf5
+
+gas_metallicity_gas_nitrogen_over_oxygen_lom_50_kpc:
+  type: "scatter"
+  legend_loc: "upper left"
+  selection_mask: "derived_quantities.has_cold_dense_gas_50_kpc"
+  comment: "All galaxies, LoM, Diffuse"
+  y:
+    quantity: "derived_quantities.gas_n_over_o_abundance_avglin_50_kpc"
+    log: false
+    units: "dimensionless"
+    start: -3
+    end: 0.5
+  x:
+    quantity: "derived_quantities.gas_o_abundance_avglin_50_kpc"
+    log: false
+    units: "dimensionless"
+    start: 7
+    end: 10
+  median:
+    plot: true
+    log: true
+    adaptive: true
+    number_of_bins: 30
+    start:
+      value: 7
+      units: "dimensionless"
+    end:
+      value: 10
+      units: "dimensionless"
+  metadata:
+    title: "Gas metallicity - Gas Nitrogen over Oxygen relation (log-of-mean, 50 kpc aperture)"
+    caption: Shown for galaxies with cold, dense gas. Metallicity is represented by 12 + $\log_{10}$ O/H (where $\log_{10}$ O/H is averaged between gas particles with a [O/H]=-3 floor for diffuse O) of the cold, dense gas ($T < 10^{4.5}\;{\rm K}$,  $n_{\rm H} > 0.1 \; {\rm cm^{-3}}$). No minimum metallicity is imposed. All haloes are plotted, including subhaloes. This uses depleted gas metallicity, i.e. it does not include metals that are present in dust.
+    section: Gas Metallicity
+    show_on_webpage: true
+  observational_data:
+    - filename: GalaxyStellarMassGasMetallicity/HaydenPawson_2022b.hdf5
+    - filename: GalaxyStellarMassGasMetallicity/Nicholls_2017b.hdf5
+    - filename: GalaxyStellarMassGasMetallicity/Berg_2020.hdf5
+
+gas_metallicity_gas_nitrogen_over_oxygen_lofloor_50_kpc:
+  type: "scatter"
+  legend_loc: "upper left"
+  selection_mask: "derived_quantities.has_cold_dense_gas_50_kpc"
+  comment: "All galaxies, LoM, Diffuse"
+  y:
+    quantity: "derived_quantities.gas_n_over_o_abundance_avglog_low_50_kpc"
+    log: false
+    units: "dimensionless"
+    start: -3
+    end: 0.5
+  x:
+    quantity: "derived_quantities.gas_o_abundance_avglog_low_50_kpc"
+    log: false
+    units: "dimensionless"
+    start: 7
+    end: 10
+  median:
+    plot: true
+    log: true
+    adaptive: true
+    number_of_bins: 30
+    start:
+      value: 7
+      units: "dimensionless"
+    end:
+      value: 10
+      units: "dimensionless"
+  metadata:
+    title: "Gas metallicity - Gas Nitrogen over Oxygen relation (mean-of-log, 50 kpc aperture)"
+    caption: Only shown for galaxies with cold, dense gas. Metallicity is represented by 12 + $\log_{10}$ O/H (where $\log_{10}$ O/H is averaged between gas particles with a [O/H]=-4 floor for diffuse O) of the cold, dense gas ($T < 10^{4.5}\;{\rm K}$,  $n_{\rm H} > 0.1 \; {\rm cm^{-3}}$). The floor values are set to 1e-4 x (N/O)sun and 1e-4 x (O/H)sun. All haloes are plotted, including subhaloes. This uses depleted gas metallicity, i.e. it does not include metals that are present in dust.
+    section: Gas Metallicity
+    show_on_webpage: true
+  observational_data:
+    - filename: GalaxyStellarMassGasMetallicity/HaydenPawson_2022b.hdf5
+    - filename: GalaxyStellarMassGasMetallicity/Nicholls_2017b.hdf5
+    - filename: GalaxyStellarMassGasMetallicity/Berg_2020.hdf5
+
+gas_metallicity_gas_nitrogen_over_oxygen_hifloor_50_kpc:
+  type: "scatter"
+  legend_loc: "upper left"
+  selection_mask: "derived_quantities.has_cold_dense_gas_50_kpc"
+  comment: "All galaxies, LoM, Diffuse"
+  y:
+    quantity: "derived_quantities.gas_n_over_o_abundance_avglog_high_50_kpc"
+    log: false
+    units: "dimensionless"
+    start: -3
+    end: 0.5
+  x:
+    quantity: "derived_quantities.gas_o_abundance_avglog_high_50_kpc"
+    log: false
+    units: "dimensionless"
+    start: 7
+    end: 10
+  median:
+    plot: true
+    log: true
+    adaptive: true
+    number_of_bins: 30
+    start:
+      value: 7
+      units: "dimensionless"
+    end:
+      value: 10
+      units: "dimensionless"
+  metadata:
+    title: "Gas metallicity - Gas Nitrogen over Oxygen relation (mean-of-log, 50 kpc aperture)"
+    caption: Only shown for galaxies with cold, dense gas. Metallicity is represented by 12 + $\log_{10}$ O/H (where $\log_{10}$ O/H is averaged between gas particles with a [O/H]=-3 floor for diffuse O) of the cold, dense gas ($T < 10^{4.5}\;{\rm K}$,  $n_{\rm H} > 0.1 \; {\rm cm^{-3}}$). The floor values are set to 1e-3 x (N/O)sun and 1e-3 x (O/H)sun. All haloes are plotted, including subhaloes. This uses depleted gas metallicity, i.e. it does not include metals that are present in dust.
+    section: Gas Metallicity
+    show_on_webpage: true
+  observational_data:
+    - filename: GalaxyStellarMassGasMetallicity/HaydenPawson_2022b.hdf5
+    - filename: GalaxyStellarMassGasMetallicity/Nicholls_2017b.hdf5
+    - filename: GalaxyStellarMassGasMetallicity/Berg_2020.hdf5
+
+gas_metallicity_gas_carbon_over_oxygen_lom_50_kpc:
+  type: "scatter"
+  legend_loc: "upper left"
+  selection_mask: "derived_quantities.has_cold_dense_gas_50_kpc"
+  comment: "All galaxies, LoM, Diffuse"
+  y:
+    quantity: "derived_quantities.gas_c_over_o_abundance_avglin_50_kpc"
+    log: false
+    units: "dimensionless"
+    start: -3
+    end: 0.5
+  x:
+    quantity: "derived_quantities.gas_o_abundance_avglin_50_kpc"
+    log: false
+    units: "dimensionless"
+    start: 7
+    end: 10
+  median:
+    plot: true
+    log: true
+    adaptive: true
+    number_of_bins: 30
+    start:
+      value: 7
+      units: "dimensionless"
+    end:
+      value: 10
+      units: "dimensionless"
+  metadata:
+    title: "Gas metallicity - Gas Carbon over Oxygen relation (log-of-mean, 50 kpc aperture)"
+    caption: Only shown for galaxies with cold, dense gas. Metallicity is represented by 12 + $\log_{10}$ O/H (where $\log_{10}$ O/H is averaged between gas particles for diffuse O) of the cold, dense gas ($T < 10^{4.5}\;{\rm K}$,  $n_{\rm H} > 0.1 \; {\rm cm^{-3}}$). No minimum metallicity is imposed. All haloes are plotted, including subhaloes. This uses depleted gas metallicity, i.e. it does not include metals that are present in dust.
+    section: Gas Metallicity
+    show_on_webpage: true
+  observational_data:
+    - filename: GalaxyStellarMassGasMetallicity/Nicholls_2017a.hdf5
+
+gas_metallicity_gas_carbon_over_oxygen_lofloor_50_kpc:
+  type: "scatter"
+  legend_loc: "upper left"
+  selection_mask: "derived_quantities.has_cold_dense_gas_50_kpc"
+  comment: "All galaxies, LoM, Diffuse"
+  y:
+    quantity: "derived_quantities.gas_c_over_o_abundance_avglog_low_50_kpc"
+    log: false
+    units: "dimensionless"
+    start: -3
+    end: 0.5
+  x:
+    quantity: "derived_quantities.gas_o_abundance_avglog_low_50_kpc"
+    log: false
+    units: "dimensionless"
+    start: 7
+    end: 10
+  median:
+    plot: true
+    log: true
+    adaptive: true
+    number_of_bins: 30
+    start:
+      value: 7
+      units: "dimensionless"
+    end:
+      value: 10
+      units: "dimensionless"
+  metadata:
+    title: "Gas metallicity - Gas Carbon over Oxygen relation (mean-of-log, 50 kpc aperture)"
+    caption: Only shown for galaxies with cold, dense gas. Metallicity is represented by 12 + $\log_{10}$ O/H (where $\log_{10}$ O/H is averaged between gas particles with a [O/H]=-4 floor for diffuse O) of the cold, dense gas ($T < 10^{4.5}\;{\rm K}$,  $n_{\rm H} > 0.1 \; {\rm cm^{-3}}$). The floor values are set to 1e-4 x (C/O)sun and 1e-4 x (O/H)sun. All haloes are plotted, including subhaloes. This uses depleted gas metallicity, i.e. it does not include metals that are present in dust.
+    section: Gas Metallicity
+    show_on_webpage: true
+  observational_data:
+    - filename: GalaxyStellarMassGasMetallicity/Nicholls_2017a.hdf5
+
+gas_metallicity_gas_carbon_over_oxygen_hifloor_50_kpc:
+  type: "scatter"
+  legend_loc: "upper left"
+  selection_mask: "derived_quantities.has_cold_dense_gas_50_kpc"
+  comment: "All galaxies, LoM, Diffuse"
+  y:
+    quantity: "derived_quantities.gas_c_over_o_abundance_avglog_high_50_kpc"
+    log: false
+    units: "dimensionless"
+    start: -3
+    end: 0.5
+  x:
+    quantity: "derived_quantities.gas_o_abundance_avglog_high_50_kpc"
+    log: false
+    units: "dimensionless"
+    start: 7
+    end: 10
+  median:
+    plot: true
+    log: true
+    adaptive: true
+    number_of_bins: 30
+    start:
+      value: 7
+      units: "dimensionless"
+    end:
+      value: 10
+      units: "dimensionless"
+  metadata:
+    title: "Gas metallicity - Gas Carbon over Oxygen relation (mean-of-log, 50 kpc aperture)"
+    caption: Only shown for galaxies with cold, dense gas. Metallicity is represented by 12 + $\log_{10}$ O/H (where $\log_{10}$ O/H is averaged between gas particles with a [O/H]=-3 floor for diffuse O) of the cold, dense gas ($T < 10^{4.5}\;{\rm K}$,  $n_{\rm H} > 0.1 \; {\rm cm^{-3}}$). The floor values are set to 1e-3 x (C/O)sun and 1e-3 x (O/H)sun. All haloes are plotted, including subhaloes. This uses depleted gas metallicity, i.e. it does not include metals that are present in dust.
+    section: Gas Metallicity
+    show_on_webpage: true
+  observational_data:
+    - filename: GalaxyStellarMassGasMetallicity/Nicholls_2017a.hdf5
+
 stellar_mass_star_metallicity_50:
   type: "scatter"
   legend_loc: "upper left"
