--- a/colibre/auto_plotter/metallicity.yml
+++ b/colibre/auto_plotter/metallicity.yml
@@ -527,7 +527,7 @@ stellar_mass_gas_nitrogen_over_oxygen_lom_50_kpc:
       units: solar_mass
   metadata:
     title: "Stellar mass - Gas Diffuse Nitrogen over Oxygen relation (log-of-mean, 50 kpc aperture)"
-    caption: Shown for galaxies with cold, dense gas. No minimum metallicity is imposed. All haloes are plotted, including subhaloes. This uses depleted gas metallicity, i.e. it does not include metals that are present in dust.
+    caption: Shown for galaxies with cold, dense gas. No minimum metallicity is imposed. All haloes are plotted, including subhaloes. This uses diffused element mass fractions, meaning that it does not include metals that are present in dust. This figure shows the log-of-mean, which means it first calculates the mass weighted average of N/O for each galaxy and then calculates the log.
     section: Gas Metallicity
     show_on_webpage: true
   observational_data:
@@ -562,7 +562,7 @@ stellar_mass_gas_nitrogen_over_oxygen_hifloor_50_kpc:
       units: solar_mass
   metadata:
     title: "Stellar mass - Gas Diffuse Nitrogen over Oxygen relation (mean-of-log, 50 kpc aperture)"
-    caption: Shown for galaxies with cold, dense gas. The floor value is set to 1e-3 x (N/O)sun. All haloes are plotted, including subhaloes. This uses depleted gas metallicity, i.e. it does not include metals that are present in dust.
+    caption: Shown for galaxies with cold, dense gas. The floor value is set to 1e-3 x (N/O)sun. All haloes are plotted, including subhaloes. This uses diffused element abundances, i.e. it does not include metals that are present in dust. Note that this figure shows the mean-of-log, which means it calculates the mass weighted of log(N/O) for each galaxy.
     section: Gas Metallicity
     show_on_webpage: true
   observational_data:
@@ -597,7 +597,7 @@ stellar_mass_gas_nitrogen_over_oxygen_lofloor_50_kpc:
       units: solar_mass
   metadata:
     title: "Stellar mass - Gas Diffuse Nitrogen over Oxygen relation (mean-of-log, 50 kpc aperture)"
-    caption: Shown for galaxies with cold, dense gas. The floor value is set to 1e-4 x (N/O)sun. All haloes are plotted, including subhaloes. This uses depleted gas metallicity, i.e. it does not include metals that are present in dust.
+    caption: Shown for galaxies with cold, dense gas. The floor value is set to 1e-4 x (N/O)sun. All haloes are plotted, including subhaloes. These quantities do not include metals that are present in dust. Note that this figure shows the mean-of-log, which means it calculates the mass weighted of log(N/O) for each galaxy.
     section: Gas Metallicity
     show_on_webpage: true
   observational_data:
@@ -632,7 +632,7 @@ gas_metallicity_gas_nitrogen_over_oxygen_lom_50_kpc:
       value: 10
       units: "dimensionless"
   metadata:
-    title: "Gas metallicity - Gas Nitrogen over Oxygen relation (log-of-mean, 50 kpc aperture)"
+    title: "Diffuse Gas metallicity - Diffuse Gas Nitrogen over Oxygen relation (log-of-mean, 50 kpc aperture)"
     caption: Shown for galaxies with cold, dense gas. Metallicity is represented by 12 + $\log_{10}$ O/H (where $\log_{10}$ O/H is averaged between gas particles with a [O/H]=-3 floor for diffuse O) of the cold, dense gas ($T < 10^{4.5}\;{\rm K}$,  $n_{\rm H} > 0.1 \; {\rm cm^{-3}}$). No minimum metallicity is imposed. All haloes are plotted, including subhaloes. This uses depleted gas metallicity, i.e. it does not include metals that are present in dust.
     section: Gas Metallicity
     show_on_webpage: true
@@ -670,7 +670,7 @@ gas_metallicity_gas_nitrogen_over_oxygen_lofloor_50_kpc:
       value: 10
       units: "dimensionless"
   metadata:
-    title: "Gas metallicity - Gas Nitrogen over Oxygen relation (mean-of-log, 50 kpc aperture)"
+    title: "Diffuse Gas metallicity - Diffuse Gas Nitrogen over Oxygen relation (mean-of-log, 50 kpc aperture)"
     caption: Only shown for galaxies with cold, dense gas. Metallicity is represented by 12 + $\log_{10}$ O/H (where $\log_{10}$ O/H is averaged between gas particles with a [O/H]=-4 floor for diffuse O) of the cold, dense gas ($T < 10^{4.5}\;{\rm K}$,  $n_{\rm H} > 0.1 \; {\rm cm^{-3}}$). The floor values are set to 1e-4 x (N/O)sun and 1e-4 x (O/H)sun. All haloes are plotted, including subhaloes. This uses depleted gas metallicity, i.e. it does not include metals that are present in dust.
     section: Gas Metallicity
     show_on_webpage: true
@@ -708,7 +708,7 @@ gas_metallicity_gas_nitrogen_over_oxygen_hifloor_50_kpc:
       value: 10
       units: "dimensionless"
   metadata:
-    title: "Gas metallicity - Gas Nitrogen over Oxygen relation (mean-of-log, 50 kpc aperture)"
+    title: "Diffuse Gas metallicity - Diffuse Gas Nitrogen over Oxygen relation (mean-of-log, 50 kpc aperture)"
     caption: Only shown for galaxies with cold, dense gas. Metallicity is represented by 12 + $\log_{10}$ O/H (where $\log_{10}$ O/H is averaged between gas particles with a [O/H]=-3 floor for diffuse O) of the cold, dense gas ($T < 10^{4.5}\;{\rm K}$,  $n_{\rm H} > 0.1 \; {\rm cm^{-3}}$). The floor values are set to 1e-3 x (N/O)sun and 1e-3 x (O/H)sun. All haloes are plotted, including subhaloes. This uses depleted gas metallicity, i.e. it does not include metals that are present in dust.
     section: Gas Metallicity
     show_on_webpage: true
@@ -746,7 +746,7 @@ gas_metallicity_gas_carbon_over_oxygen_lom_50_kpc:
       value: 10
       units: "dimensionless"
   metadata:
-    title: "Gas metallicity - Gas Carbon over Oxygen relation (log-of-mean, 50 kpc aperture)"
+    title: "Diffuse Gas metallicity - Diffuse Gas Carbon over Oxygen relation (log-of-mean, 50 kpc aperture)"
     caption: Only shown for galaxies with cold, dense gas. Metallicity is represented by 12 + $\log_{10}$ O/H (where $\log_{10}$ O/H is averaged between gas particles for diffuse O) of the cold, dense gas ($T < 10^{4.5}\;{\rm K}$,  $n_{\rm H} > 0.1 \; {\rm cm^{-3}}$). No minimum metallicity is imposed. All haloes are plotted, including subhaloes. This uses depleted gas metallicity, i.e. it does not include metals that are present in dust.
     section: Gas Metallicity
     show_on_webpage: true
@@ -782,7 +782,7 @@ gas_metallicity_gas_carbon_over_oxygen_lofloor_50_kpc:
       value: 10
       units: "dimensionless"
   metadata:
-    title: "Gas metallicity - Gas Carbon over Oxygen relation (mean-of-log, 50 kpc aperture)"
+    title: "Diffuse Gas metallicity - Diffuse Gas Carbon over Oxygen relation (mean-of-log, 50 kpc aperture)"
     caption: Only shown for galaxies with cold, dense gas. Metallicity is represented by 12 + $\log_{10}$ O/H (where $\log_{10}$ O/H is averaged between gas particles with a [O/H]=-4 floor for diffuse O) of the cold, dense gas ($T < 10^{4.5}\;{\rm K}$,  $n_{\rm H} > 0.1 \; {\rm cm^{-3}}$). The floor values are set to 1e-4 x (C/O)sun and 1e-4 x (O/H)sun. All haloes are plotted, including subhaloes. This uses depleted gas metallicity, i.e. it does not include metals that are present in dust.
     section: Gas Metallicity
     show_on_webpage: true
@@ -818,7 +818,7 @@ gas_metallicity_gas_carbon_over_oxygen_hifloor_50_kpc:
       value: 10
       units: "dimensionless"
   metadata:
-    title: "Gas metallicity - Gas Carbon over Oxygen relation (mean-of-log, 50 kpc aperture)"
+    title: "Diffuse Gas metallicity - Diffuse Gas Carbon over Oxygen relation (mean-of-log, 50 kpc aperture)"
     caption: Only shown for galaxies with cold, dense gas. Metallicity is represented by 12 + $\log_{10}$ O/H (where $\log_{10}$ O/H is averaged between gas particles with a [O/H]=-3 floor for diffuse O) of the cold, dense gas ($T < 10^{4.5}\;{\rm K}$,  $n_{\rm H} > 0.1 \; {\rm cm^{-3}}$). The floor values are set to 1e-3 x (C/O)sun and 1e-3 x (O/H)sun. All haloes are plotted, including subhaloes. This uses depleted gas metallicity, i.e. it does not include metals that are present in dust.
     section: Gas Metallicity
     show_on_webpage: true
