--- a/colibre/config.yml
+++ b/colibre/config.yml
@@ -103,10 +103,20 @@ scripts:
     section: Stellar Birth Properties
     output_file: birth_pressure_distribution.png
   - filename: scripts/snii_energy_fraction_distribution.py
-    caption: Distributions of SNII energy fractions, split by redshift. The y axis shows the number of stars per bin divided by the bin width and by the total number of stars. The dashed vertical lines show the median SNII energy fraction in three different redshift intervals. The dotted vertical line shows the average SNII energy fraction computed over all star particles in the simulation.
-    title: SNII Energy Fraction
-    section: Stellar Birth Properties
+    caption: Distribution of SNII energy fractions, split by redshift. The y-axis shows the number of stars per bin divided by the bin width and by the total number of stars. The dashed vertical lines show the median SNII energy fraction in three different redshift intervals. The dotted vertical line shows the average SNII energy fraction computed over all star particles in the simulation.
+    title: SNII Energy Fraction Distribution
+    section: SN Feedback Energy Fractions
     output_file: snii_energy_fraction_distribution.png
+  - filename: scripts/snii_energy_fraction_birth_pressure.py
+    caption: The relation between the SNII energy fraction and stellar birth pressure. The dashed vertical lines indicate the pivot birth pressure used in the simulation.
+    title: SNII Energy Fraction vs. Stellar Birth Pressure
+    section: SN Feedback Energy Fractions
+    output_file: snii_energy_fraction_birth_pressure.png
+  - filename: scripts/snii_energy_fraction_stellar_mass.py
+    caption: The SNII energy fraction evaluated at the galaxy median stellar birth pressure vs. galaxy stellar mass. The solid lines indicate the median values in stellar mass bins, while the shaded regions indicate the 16-84 percentile scatter.
+    title: SNII Energy Fraction vs. Galaxy Stellar Mass
+    section: SN Feedback Energy Fractions
+    output_file: snii_energy_fraction_stellar_mass.png
   - filename: scripts/birth_temperature_distribution.py
     caption: Distributions of stellar birth temperatures, split by redshift. The y axis shows the number of stars per bin divided by the bin width and by the total number of stars. The dashed vertical lines show the median stellar birth-temperatures.
     title: Stellar Birth Temperatures
